phan trang, rang buoc du 4 hinh anh trong quan ly san pham

--- a/views/admin/adsanpham/create.ejs
+++ b/views/admin/adsanpham/create.ejs
@@ -72,7 +72,7 @@
                                             <input type="submit" name="themsanpham" value="Thêm sản phẩm"
                                                  class="btn btn-primary"><br />
                                             <br />
-                                            <a class="btn btn-info" href="admin/sanpham">Quay lại?</a>
+                                            <a class="btn btn-info" href="/admin/sanpham?page=1">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
@@ -137,6 +137,12 @@
             const count = files.length;
         $('input[name=themsanpham]').click(function () {
             let count = files.length;
+
+            if(count < 4){
+                alert('Hình ảnh còn thiếu');
+                return false;  
+            }
+
             for (let i = 0; i < count; i++) {
                 if (!files[i].type.includes('image')) {
                     alert('Hình ảnh không hợp lệ');
