--- a/views/admin/partials/adminleft.ejs
+++ b/views/admin/partials/adminleft.ejs
@@ -28,7 +28,7 @@
                         <span>Quản lý sản phẩm</span>
                     </a>
                     <ul class="sub">
-						<li><a href="/admin/sanpham">Sản phẩm</a></li>
+						<li><a href="/admin/sanpham?page=1">Sản phẩm</a></li>
 						
                     </ul>
                 </li>
