--- a/views/client/donghonam/donghonam.ejs
+++ b/views/client/donghonam/donghonam.ejs
@@ -41,6 +41,18 @@
                                                                                 class="fa fa-bars"></i></a></li>
                                                                 </ul>
                                                             </div>
+                                                          
+                                                        </div>
+                                                        <div style="display: flex; justify-content: flex-end;">
+                                                            <form action="/donghonam/locgia" style="display: flex; padding-left: 15px;" method="GET">
+                                                                <span>Giá thấp nhất: </span> <input value="0" type="number"  name="minPrice" min="0" class="form-control"
+                                                                    style="width: 200px;" />
+                                                                <span>Giá cao nhất: </span> <input value="0" type="number" name="maxPrice" min="0" class="form-control"
+                                                                    style="width: 200px;" />
+
+                                                                <button class="btn btn-primary" type="submit">Lọc</button>
+                                                            </form>
+                                                        
                                                         </div>
                                                     </div>
                                                     <!-- tab-area-start -->
@@ -115,16 +127,19 @@
                                                         </div>
                                                         
                                                     </div>
+                                                    <% if(isSearch == false) {%>
+                                                        <div style="display: flex; justify-content: center;">
+                                                            <nav aria-label="Page navigation example">
+                                                                <ul class="pagination">
+                                                                  <% for(let i=1; i<= pageNumber; i++) {%>
+                                                                        <li class="page-item"><a class="page-link" href="/donghonam?page=<%= i %>"><%= i%></a></li>
+                                                                  <% } %>
+                                                                </ul>
+                                                              </nav>
+                                                        </div>
+                                                    <% }%>
                                                     <!-- tab-area-end -->
-                                                    <div style="display: flex; justify-content: center;">
-                                                        <nav aria-label="Page navigation example">
-                                                            <ul class="pagination">
-                                                              <% for(let i=1; i<= pageNumber; i++) {%>
-                                                                    <li class="page-item"><a class="page-link" href="/donghonam?page=<%= i %>"><%= i%></a></li>
-                                                              <% } %>
-                                                            </ul>
-                                                          </nav>
-                                                    </div>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
