--- a/views/admin/adlogin/login.ejs
+++ b/views/admin/adlogin/login.ejs
@@ -9,7 +9,7 @@
 			<input type="text" class="ggg" name="username" placeholder="USERNAME OR EMAIL" required="">
 			<input type="password" class="ggg" name="password" placeholder="PASSWORD" required="">
 			<span><input type="checkbox" />Remember Me</span>
-			<h6><a href="#">Forgot Password?</a></h6>
+			<h6><a href="/admin/quenmatkhau/email">Bạn quên mật khẩu</a></h6>
 				<div class="clearfix"></div>
 				<input type="submit" value="Sign In" name="login">
 		</form>
