--- a/views/admin/adcanhan/canhan.ejs
+++ b/views/admin/adcanhan/canhan.ejs
@@ -44,7 +44,7 @@
                                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                         <div class="single-register">
                                                             <p>Số điện thoại<span>*</span></p>
-                                                            <input class="register-emailaddress-phone" type="text" id="phone" name="phone" 
+                                                            <input class="register-emailaddress-phone" type="number" id="phone" name="phone" 
                                                             style="width: 370px;height: 40px;" value="<%= nhanvien ? nhanvien.sodienthoai : '' %>"/>
                                                         </div><br/>
                                                     </div>
