--- a/views/admin/adsanpham/create.ejs
+++ b/views/admin/adsanpham/create.ejs
@@ -36,7 +36,7 @@
                                             <label>Trạng thái</label> <br />
                                             <input name="trangthai" type="radio" value="1" checked="checked" >
                                             Còn Hàng
-                                            <input name="trangthai" type="radio" value="0"> Sắp Hết Hàng <br />
+                                            <input name="trangthai" type="radio" value="0"> Hết Hàng <br />
                                             <br />
 
                                             <label><img src="">Hình ảnh</label>
