--- a/views/admin/adsanpham/update.ejs
+++ b/views/admin/adsanpham/update.ejs
@@ -42,7 +42,7 @@
                                                     <input name="trangthai" type="radio" value="1">
                                                     Còn Hàng
                                                     <input name="trangthai" type="radio" value="0" checked="checked">
-                                                    Sắp Hết Hàng <br />
+                                                    Hết Hàng <br />
                                                     <br />
                                                     <% } %>
 
