--- a/views/admin/adlogin/login.ejs
+++ b/views/admin/adlogin/login.ejs
@@ -4,16 +4,14 @@
 <body>
 <div class="log-w3">
 <div class="w3layouts-main">
-	<h2>Sign In Now</h2>
+	<h2 style="color:darkblue">ĐĂNG NHẬP</h2>
 		<form action="/admin/login" method="post">
 			<input type="text" class="ggg" name="username" placeholder="USERNAME OR EMAIL" required="">
 			<input type="password" class="ggg" name="password" placeholder="PASSWORD" required="">
-			<span><input type="checkbox" />Remember Me</span>
-			<h6><a href="/admin/quenmatkhau/email">Bạn quên mật khẩu</a></h6>
+			<h6><a style="color:chocolate;" href="/admin/quenmatkhau/email">Quên mật khẩu</a></h6>
 				<div class="clearfix"></div>
-				<input type="submit" value="Sign In" name="login">
+				<input style="color:blue" type="submit" value="ĐĂNG NHẬP" name="login">
 		</form>
-		<p>Don't Have an Account ?<a href="registration.html">Create an account</a></p>
 </div>
 </div>
 <%- include('../partials/adminscript_bottom'); -%>
