--- a/views/admin/adquenmatkhau/matkhaumoi.ejs
+++ b/views/admin/adquenmatkhau/matkhaumoi.ejs
@@ -2,49 +2,20 @@
 <html lang="en">
 <%- include('../partials/adminhead'); -%>
 <body>
-<section id="container">
-<%- include('../partials/adminheader'); -%>
-<%- include('../partials/adminleft'); -%>
-<!--main content start-->
-<section id="main-content">
-	<section class="wrapper">
-		   <div class="clearfix">
-            <div class="table-agile-info">
-                <div class="user-login-area mb-70">
-                    <div class="container">
-                        <form action="/admin/quenmatkhau/sendmail" method="POST" id="formquenmatkhau">
-                            <fieldset>
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="login-title text-center mb-30 mt-40">
-                                            <h2>Nhập email của bạn</h2>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-12 col-xs-12">
-                                        <div class="login-form">
-                                            <div class="single-login">
-                                                <label>Email<span>*</span></label>
-                                                <input type="email" id="email" name="emailUser" />
-                                                <span id="messemail" style="color: red; font-weight: bold;" ></span>
-                                            </div>
-                                            <div class="single-login single-login-2">
-                                                <input class="btn-login" style="font-size: 20px;" type="submit" name="btn btn-primary" value="Gửi" />
-                                            </div>
-                                            <a href="/admin/login">Quay lại trang đăng nhập?</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-  </section>
-<%- include('../partials/adminfooter'); -%>
-</section>
-<!--main content end-->
-</section>
+<div class="log-w3">
+<div class="w3layouts-main">
+    <h2 style="color:darkblue">Đặt lại mật khẩu</h2>
+        <form method="POST" action="/admin/quenmatkhau/updatematkhau" id="formChangePass">
+            <label style="color:fuchsia">Mật khẩu mới</label>
+            <input class="ggg" type="password" name="password" id="newPass"/>
+            <label style="color:fuchsia">Nhập lại mật khẩu</label>
+            <input class="ggg" type="password" id="oldpass" name="confirm" />
+            
+            <a class="ggg" style="color: chocolate;" href="/admin/login">Quay lại trang đăng nhập?</a>
+        
+        </form>
+</div>
+</div>
 <%- include('../partials/adminscript_bottom'); -%>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
@@ -73,4 +44,3 @@
             });
     </script>
 </html>
-
