--- a/views/admin/adsanpham/sanpham.ejs
+++ b/views/admin/adsanpham/sanpham.ejs
@@ -16,7 +16,7 @@
                     <input type="text" name="search" placeholder="Nhập từ khóa cần tìm ..." />
                     <a onclick="onSubmitSearch()"><i class="fa fa-search"></i></a>
                     <p id="countSP"></p>
-                    <a class="btn btn-info" href="admin/sanpham">Quay lại?</a>
+                    <a class="btn btn-info" href="/admin/sanpham?page=1">Quay lại?</a>
                   </div>
                   <!--search end-->
                   <div class="panel panel-default">
