--- a/views/client/canhan/canhan.ejs
+++ b/views/client/canhan/canhan.ejs
@@ -64,14 +64,39 @@
                         </form>
                     </div>
                 </div>
+                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Thông báo</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Cập nhật thông tin thành công!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- user-login-area-end -->
                 <%- include ('../partials/footer'); -%>
         </div>
     </body>
     <script>
-        let mess = '<%= mess %>';
-        if(mess && mess == 1){
-            alert('Cập nhật thông tin thành công!');
-        }
+        $(document).ready(function(){
+            let mess = '<%= mess %>';
+
+            if(mess && mess == 1){
+                $('#modalNotify').modal('show');
+
+                $('#btnOk').click(function(){
+                    $('#modalNotify').modal('hide');
+                })
+            }  
+        })
     </script>
 </html>
