--- a/views/client/dangky/dangky.ejs
+++ b/views/client/dangky/dangky.ejs
@@ -73,6 +73,25 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Thông báo</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Đăng ký thành công</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- user-login-area-end -->
                 <%- include ('../partials/footer'); -%>
         </div>
@@ -109,6 +128,18 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script>
+        $(document).ready(function(){
+            let mess = '<%= mess %>';
+
+            if(mess && mess == 1){
+                $('#modalNotify').modal('show');
+
+                $('#btnOk').click(function(){
+                    window.location.replace('/dangnhap');
+                })
+            }  
+        })
+        
         $("#formDangKy").validate({
             rules: {
                 username: {
