--- a/views/admin/admessage/message.ejs
+++ b/views/admin/admessage/message.ejs
@@ -3,46 +3,20 @@
 <%- include('../partials/adminhead'); -%>
 <body>
     <%- include('../partials/adminheader'); -%>
-<div class="log-w3">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-    <div class="user-login-area mb-70 mt-100">
-        <div class="container" style="display: flex; justify-content: center;">
-            <div class="card"
-                style="width: 900px; height: fit-content; border: 2px solid red; border-radius: 20px; background-color: blanchedalmond;">
-                <div class="card-body">
-                    <h3 class="text-center" style="margin-top: 15px; font-family: 'Times New Roman', Times, serif;"><%= message %></h3>
-                    
+  
+    <div>
+        <div class="user-login-area mb-70 mt-100" style=" height: 700px; display: flex; align-items: center;">
+            <div class="container" style="display: flex; justify-content: center;">
+                <div class="card"
+                    style="width: 900px; height: fit-content; border: 2px solid red; border-radius: 20px; background-color: blanchedalmond;">
+                    <div class="card-body">
+                        <h3 class="text-center" style="margin-top: 15px; font-family: 'Times New Roman', Times, serif;"><%= message %></h3>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <%- include('../partials/adminfooter'); -%>
-</div>
 <%- include('../partials/adminscript_bottom'); -%>
 </body>
 </html>
