--- a/views/admin/adquenmatkhau/email.ejs
+++ b/views/admin/adquenmatkhau/email.ejs
@@ -7,28 +7,58 @@
     }
 </style>
 <%- include('../partials/adminhead'); -%>
-<body>
-<div class="log-w3">
-<div class="w3layouts-main">
-    <h2>Nhập email của bạn</h2>
-        <form action="/admin/quenmatkhau/sendmail" method="POST" id="formquenmatkhau">
-            <label>Email*</label>
-            <input type="email" class="ggg" name="emailUser">
-            <br/>
-            <span id="messemail" style="color: red; font-style: italic;" ></span>
-            <br/>
-            
-            <input class="btn-login" style="font-size: 20px;" type="submit" name="btn btn-primary" value="Gửi" />
-            
-            <a class="ggg" style="color: chocolate;" href="/admin/login">Quay lại trang đăng nhập?</a>
-        
-        </form>
-</div>
-</div>
-<%- include('../partials/adminscript_bottom'); -%>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+
+    <body>
+        <div class="log-w3">
+            <div class="w3layouts-main">
+                <h2>Nhập email của bạn</h2>
+                <form action="/admin/quenmatkhau/sendmail" method="POST" id="formquenmatkhau">
+                    <label>Email*</label>
+                    <input type="email" class="ggg" name="emailUser">
+                    <br />
+                    <span id="messemail" style="color: red; font-style: italic;"></span>
+                    <br />
+
+                    <input class="btn-login" style="font-size: 20px;" type="submit" name="btn btn-primary"
+                        value="Gửi" />
+                    <a class="ggg" style="color: chocolate;" href="/admin/login">Quay lại trang đăng nhập?</a>
+                </form>
+            </div>
+            <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Thông báo</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Email không tồn tại trong hệ thống</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <%- include('../partials/adminscript_bottom'); -%>
+    </body>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script>
+        
+            let mess = `<%= mess %>`;
+
+            if (mess && mess == 0) {
+                $('#modalNotify').modal('show');
+
+                $('#btnOk').click(function () {
+                    $('#modalNotify').modal('hide');
+                })
+            }
+       
+
         $("#formquenmatkhau").validate({
             rules: {
                 emailUser: {
@@ -53,4 +83,5 @@
             }
         });
     </script>
+
 </html>
